syntax = "proto3";

package alfred.types;

option go_package = "alfred/protos/types";

message FieldMask {
    repeated string field_mask = 1;
}
